updated category  handler
