# pkg/api/handler/category.go
@@ -122,7 +122,7 @@ func (Cat *CategoryHandler) UpdateCategory(c *gin.Context) {
 // @Failure 400 {object} response.Response  "Bad request: Fields are not provided in the correct format"
 // @Failure 401 {object} response.Response  "Unauthorized: Invalid or missing authentication"
 // @Failure 500 {object} response.Response  "Internal server error: Could not delete the category"
-// @Router /categories/delete [delete]
+// @Router /admin/category [delete]
 func (Cat *CategoryHandler) DeleteCategory(c *gin.Context) {
 
 	categoryID := c.Query("id")
